--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>core</module>
         <module>dao</module>
         <module>entity</module>
+        <module>commons</module>
     </modules>
 
     <repositories>
@@ -48,6 +49,12 @@
             <dependency>
                 <groupId>xyz.vimtool</groupId>
                 <artifactId>entity</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>xyz.vimtool</groupId>
+                <artifactId>commons</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
@@ -179,6 +186,13 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- kaptcha验证码 -->
+        <!-- https://mvnrepository.com/artifact/com.github.penggle/kaptcha -->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
