--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,19 @@
     <groupId>xyz.vimtool</groupId>
     <artifactId>xiao-mall</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
-        <module>core</module>
-        <module>dao</module>
-        <module>entity</module>
-        <module>commons</module>
+        <module>xiao-core</module>
+        <module>xiao-dao</module>
+        <module>xiao-entity</module>
+        <module>xiao-common</module>
     </modules>
 
     <repositories>
         <repository>
             <id>aliyun</id>
             <name>aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
@@ -29,33 +29,33 @@
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.1.0.RELEASE</version>
+                <version>2.1.3.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
 
             <dependency>
                 <groupId>xyz.vimtool</groupId>
-                <artifactId>core</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <artifactId>xiao-core</artifactId>
+                <version>1.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>xyz.vimtool</groupId>
-                <artifactId>dao</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <artifactId>xiao-dao</artifactId>
+                <version>1.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>xyz.vimtool</groupId>
-                <artifactId>entity</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <artifactId>xiao-entity</artifactId>
+                <version>1.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>xyz.vimtool</groupId>
-                <artifactId>commons</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <artifactId>xiao-common</artifactId>
+                <version>1.0.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -161,7 +161,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.49</version>
+            <version>1.2.55</version>
         </dependency>
 
         <!-- swagger配置api -->
