--- a/xiao-common/pom.xml
+++ b/xiao-common/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>xiao-mall</artifactId>
         <groupId>xyz.vimtool</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>commons</artifactId>
-
+    <artifactId>xiao-common</artifactId>
+    <packaging>jar</packaging>
 
 </project>
