--- a/xiao-core/pom.xml
+++ b/xiao-core/pom.xml
@@ -5,17 +5,17 @@
     <parent>
         <artifactId>xiao-mall</artifactId>
         <groupId>xyz.vimtool</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>war</packaging>
-    <artifactId>core</artifactId>
+    <artifactId>xiao-core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>xyz.vimtool</groupId>
-            <artifactId>dao</artifactId>
+            <artifactId>xiao-dao</artifactId>
         </dependency>
     </dependencies>
 </project>
