--- a/xiao-core/src/main/resources/application-test.yml
+++ b/xiao-core/src/main/resources/application-test.yml
@@ -1,5 +1,5 @@
 # ===================================================================
-# Spring Boot configuration for the "prod" profile.
+# Spring Boot configuration for the "test" profile.
 # This configuration overrides the application.yml file.
 # ===================================================================
 
@@ -18,6 +18,6 @@ spring:
 # druid alibaba database connection pool
 # ===================================================================
 druid:
-  url: jdbc:mysql://127.0.0.1:3306/mat_3.0.0?useUnicode=true&serverTimezone=CTT&useSSL=false&characterEncoding=UTF-8
+  url: jdbc:mysql://127.0.0.1:3306/mat_3.0.0?useUnicode=true&serverTimezone=CTT&useSSL=false
   username: root
   password: local-2018
